[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Assets/Fonts/Roboto_font/Roboto_25.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Scripts/uiScripts/popUps/autoplay_script.gd" type="Script" id=2]

[node name="autoplay_pannel" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -125.0
margin_right = 150.0
margin_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 250 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 292.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 170 )
size_flags_horizontal = 3

[node name="spins_label" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.772549, 1, 0.207843, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "Spins"
align = 1
valign = 1

[node name="spins_spinbox" type="SpinBox" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 292.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 292.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 3
alignment = 1

[node name="autoplay_confirm_btn" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.2, 1, 0.211765, 1 )
margin_right = 144.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Confirm"

[node name="autoplay_cancel_btn" type="Button" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.972549, 0.254902, 0.254902, 1 )
margin_left = 148.0
margin_right = 292.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Cancel"
